# quark

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
bench/: benchmark.cpp
docs/: DESIGN.md  INDEX.md  PERFORMANCE.md  api.md  architecture.md  benchmarking.md  build_flags.md  concurrency.md  correctness.md  event_model.md  faq.md  interview.md  intrusive_lists.md  ioc_fok.md  latency_budget.md  memory.md  numa.md  perf_notes.md  price_encoding.md  replace_order.md  roadmap.md  robin_hood.md  self_trade.md  spsc_ingress.md  symbol_sharding.md
examples/: simple_match.cpp
include/me/: naive_book.hpp  order.hpp  order_book.hpp  pool.hpp  price_level.hpp  price_map.hpp  robin_hood.hpp  spsc_queue.hpp  types.hpp
scripts/: generate_charts.py  plot_comparison.py  plot_latency.py  plot_throughput.py  run_release.sh
src/: order_book.cpp
tests/: fuzz_outline.md  stress_outline.md  unit_tests.cpp
